fix contrast test

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4059,7 +4059,7 @@ input, select, textarea {
 
 			#footer .inner .copyright li {
 				border-left: solid 2px rgba(255, 255, 255, 0.125);
-				color: rgba(255, 255, 255, 0.35);
+				color: rgba(255, 255, 255, 0.60);
 				display: inline-block;
 				font-size: 0.9em;
 				line-height: 1;
